  the onclick widget property needs to change.  Copy the default value from a new
  lookupwindowfield.
  
- DateTime widgets in the SMI now have a 'calendar' button which
  opens a popup calendar -- an easier way to supply datetimes.

- fixed formulator lookupwindow widget to support functioning in multi-reference
  mode in a metadata set.

Bugs Fixed
~~~~~~~~~~
- In kupu, when an active external source (i.e. the external source tool is
  showing that ES's parameters), clicking on the same ES no longer causes
  the tool to reload (no more flicker)

- Errors when attempting to upload interlaced PNGs are now caught and
  displayed to the user.

- launchpad #400019: Silva Link: allow editing of relative / absolute property,
  or get rid of it altogether.  Silva 2.1 allowed editing of this property.  Silva
  2.2 has removed the link type.  Now there is only one type of link, and it is the
  authors responsibility to ensure it is a valid relative or absolute link.

- For a possible security issue the "served by host foo" comment was removed
  from macro_index.pt

- The user clipboard 'remove user' button now returns to the correct add user 
  form. (search or direct user lookup)

- tab_preview frameset now requires that the user be logged in.  Previously, if 
  using form-based auth, one might see an authentication screen in both
  frames.

- update last author when documents are saved.

- IContent objects (well, those extending Products.Silva.Content.Content) are now
  cataloged.

- enable changing the html form enctype of edit views using one of the
  macro_edit macros
  
- #261571: AutoTOCs have a new property "show container link". When set to 'yes'
  the public view will include an <h3> above the table of contents with
  the title of the container of the AutoTOC linking to the container.  This is
  useful if the AutoTOC is a sitemap.

Silva 2.2a2 (2009-01-12)
------------------------

New Features
~~~~~~~~~~~~
