@@ -22,7 +22,13 @@ module_security = ModuleSecurityInfo('Products.Silva.adapters.path')
 import re
 
 frag_re = re.compile("([^\#\?]*)(\?[^\#]*)?(\#.*)?")
-URL_PATTERN = r'(((http|https|ftp|news)://([A-Za-z0-9%\-_]+(:[A-Za-z0-9%\-_]+)?@)?([A-Za-z0-9\-]+\.)+[A-Za-z0-9]+)(:[0-9]+)?(/([A-Za-z0-9\-_\?!@#$%^&*/=\.]+[^\.\),;\|])?)?|(mailto:[A-Za-z0-9_\-\.]+@([A-Za-z0-9\-]+\.)+[A-Za-z0-9]+))'
+
+#for the mailto: pattern see the description of the email addressing
+#format in the RFC 2822: http://tools.ietf.org/html/rfc2822#section-3.4.1
+# so much more is allowed everywhere in the email address.  The RE currently
+# only searches the full list of chars for the LHS of the address.  It does
+# not support "quoted strings".
+URL_PATTERN = r'(((http|https|ftp|news)://([A-Za-z0-9%\-_]+(:[A-Za-z0-9%\-_]+)?@)?([A-Za-z0-9\-]+\.)+[A-Za-z0-9]+)(:[0-9]+)?(/([A-Za-z0-9\-_\?!@#$%^&*/=\.]+[^\.\),;\|])?)?|(mailto:[A-Za-z0-9!#\$%\&\'\*\+\-\/=\?\^_`\{\}\|~\.]+@([A-Za-z0-9\-]+\.)+[A-Za-z0-9]+))'
 _url_match = re.compile(URL_PATTERN)
 
 class SilvaPathAdapter(component.Adapter):
